@@ -258,6 +258,13 @@ name|booleanTypeName
 init|=
 literal|"boolean"
 decl_stmt|;
+DECL|field|storeSubFields
+specifier|private
+name|boolean
+name|storeSubFields
+init|=
+literal|false
+decl_stmt|;
 DECL|field|schema
 specifier|private
 name|IndexSchema
@@ -374,6 +381,32 @@ block|{
 name|booleanTypeName
 operator|=
 name|v
+expr_stmt|;
+block|}
+name|v
+operator|=
+name|args
+operator|.
+name|remove
+argument_list|(
+literal|"storeSubFields"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|v
+operator|!=
+literal|null
+condition|)
+block|{
+name|storeSubFields
+operator|=
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|v
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -651,6 +684,37 @@ name|FieldType
 name|fieldType
 parameter_list|)
 block|{
+name|int
+name|props
+init|=
+name|fieldType
+operator|.
+name|properties
+decl_stmt|;
+name|props
+operator|&=
+operator|~
+name|MULTIVALUED
+expr_stmt|;
+comment|// must not be multivalued
+if|if
+condition|(
+name|storeSubFields
+condition|)
+block|{
+name|props
+operator||=
+name|STORED
+expr_stmt|;
+block|}
+else|else
+block|{
+name|props
+operator|&=
+operator|~
+name|STORED
+expr_stmt|;
+block|}
 name|SchemaField
 name|sf
 init|=
@@ -660,6 +724,10 @@ argument_list|(
 name|name
 argument_list|,
 name|fieldType
+argument_list|,
+name|props
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|schema
