@@ -114,6 +114,21 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|spatial
+operator|.
+name|bbox
+operator|.
+name|BBoxStrategy
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -130,6 +145,45 @@ operator|.
 name|common
 operator|.
 name|SolrException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|BBoxField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|IndexSchema
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|SchemaField
 import|;
 end_import
 begin_import
@@ -2284,6 +2338,60 @@ operator|.
 name|ErrorCode
 operator|.
 name|BAD_REQUEST
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testSpatialConfig
+specifier|public
+name|void
+name|testSpatialConfig
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IndexSchema
+name|schema
+init|=
+name|h
+operator|.
+name|getCoreInc
+argument_list|()
+operator|.
+name|getLatestSchema
+argument_list|()
+decl_stmt|;
+comment|// BBox Config
+comment|// Make sure the subfields are not stored
+name|SchemaField
+name|sub
+init|=
+name|schema
+operator|.
+name|getField
+argument_list|(
+literal|"bbox"
+operator|+
+name|BBoxStrategy
+operator|.
+name|SUFFIX_MINX
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|sub
+operator|.
+name|stored
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|sub
+operator|.
+name|multiValued
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
